emacs: Add multiple-cursors package and config

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
+/emacs.d/*
+!/emacs.d/init.el
+!/emacs.d/rc/
 *.sw[o|p]
 *~
 *.local*
 .netrwhist
 Thumbs.db
-
-/emacs.d/**
-!/emacs.d/init.el
-!/emacs.d/rc/
