tmux: Color hostname to match prompt

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,9 @@ bind r source-file ~/.tmux.conf
 
 set -g status-bg colour238
 set -g status-fg colour255
+
 set-option -g status-position top
 
-set -g status-right '#(echo $USER)@#H'
+set -g status-right-length 60
+set -g status-right '#(date +%H:%M) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) '
+set -g set-clipboard on
