emacs: Refactor and simplify configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ set -g display-time 4000
 set -g status-interval 5
 
 # upgrade $TERM
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 # emacs key bindings in tmux command prompt (prefix + :) are better than
@@ -43,3 +43,6 @@ set-option -g status-position top
 set -g status-right-length 60
 set -g status-right '#(date +%H:%M) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) '
 set -g set-clipboard on
+
+
+bind c-o swap-pane -D
