tmux: Add timezone to tmux status bar
Also remove powerline decoration. It looks cool but depending on a
client's font sounds like a bad idea.

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ set -g status-fg colour255
 set-option -g status-position top
 
 set -g status-right-length 60
-set -g status-right '#(date +%H:%M) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) '
+set -g status-right '#(date +%H:%M/%Z) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) '
 set -g set-clipboard on
 
 col="colour #(~/.bin/hash_color ansi180)"
