tmux: Clean up config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,39 +1,38 @@
+# System
+
+set -g mouse on
+set -g focus-events on
+
+# TODO: document why this is needed
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
+set -g history-limit 50000
+
+set-option -g renumber-windows on
+
+setw -g aggressive-resize on
+
+# Input
+
+set -g status-keys emacs
+
 unbind-key C-b
 set -g prefix 'C-\'
 bind-key 'C-\' send-prefix
 
-# enable scrolling with mouse
-set -g mouse on
+bind-key | split-window -h
+bind-key - split-window -v
+bind-key c-o swap-pane -D
 
-# increase scrollback buffer size
-set -g history-limit 50000
-
-# tmux messages are displayed for 4 seconds
-set -g display-time 4000
-
-# refresh 'status-left' and 'status-right' more often
-set -g status-interval 5
-
-# upgrade $TERM
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-
-# emacs key bindings in tmux command prompt (prefix + :) are better than
-# vi keys, even for vim users
-set -g status-keys emacs
-
-# focus events enabled for terminals that support them
-set -g focus-events on
-
-# super useful when using "grouped sessions" and multi-monitor setup
-setw -g aggressive-resize on
+# Appearance
 
 set -g base-index 1
 setw -g pane-base-index 1
 
+set -g display-time 4000
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+set -g status-interval 5
 
 set -g status-bg colour238
 set -g status-fg colour255
@@ -44,5 +43,6 @@ set -g status-right-length 60
 set -g status-right '#(date +%H:%M) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) '
 set -g set-clipboard on
 
-
-bind c-o swap-pane -D
+col="colour #(~/.bin/hash_color ansi180)"
+set -g pane-active-border-fg colour19
+set -g pane-active-border-bg default
