tmux: Class up the top bar
- Disable tmux allow-rename to keep window titles predictable
- Add free memory display
- Class up the window listing

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ set -ga terminal-overrides ",*256col*:Tc"
 
 set -g history-limit 50000
 
+set-option -g allow-rename off
 set-option -g renumber-windows on
 
 setw -g aggressive-resize on
@@ -40,8 +41,11 @@ set -g status-fg colour255
 set-option -g status-position top
 
 set -g status-right-length 60
-set -g status-right '#(date +%H:%M/%Z) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) '
+set -g status-right "[m#(free -gt|grep Mem|awk '{print $4}')] #(date +%H:%M/%Z) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) "
 set -g set-clipboard on
+
+set -g window-status-format "#I#[fg=colour243]#W#{?window_zoomed_flag,:Z,}"
+set -g window-status-current-format "#I#[fg=colour252]#W#[nounderscore,nobold]#{?window_zoomed_flag,:Z,}"
 
 col="colour #(~/.bin/hash_color ansi180)"
 set -g pane-active-border-fg colour19
