Use `hostname -s` for prompt coloring

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ set -g status-fg colour255
 set-option -g status-position top
 
 set -g status-right-length 60
-set -g status-right "[m#(free -gt|grep Mem|awk '{print $4}')] #(date +%H:%M/%Z) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname) "
+set -g status-right "[m#(free -gt|grep Mem|awk '{print $4}')] #(date +%H:%M/%Z) #(echo $USER)@ #[fg=colour#(~/.bin/hash_color ansi180)]#[fg=colour255, bg=colour#(~/.bin/hash_color ansi180)] #(hostname -s) "
 set -g set-clipboard on
 
 set -g window-status-format "#I#[fg=colour243]#W#{?window_zoomed_flag,:Z,}"
