Use user peterklein on *.kleinpa.net

--- a/ssh/config
+++ b/ssh/config
@@ -1,12 +1,16 @@
 CanonicalizeHostname yes
 CanonicalDomains 30eg.net kleinpa.net
 
-Host halite.30eg.net
+Host halite.30eg.net *.kleinpa.net
      User peterklein
 
 Host *
      User kleinpa
 
+Host rhodonite.30eg.net
+     ForwardAgent yes
+
 Host switch-xk4.30eg.net
      HostName 192.168.0.10
      ProxyJump router-j01.30eg.net
+
