--- a/ssh/config
+++ b/ssh/config
@@ -1,16 +1,13 @@
-CanonicalizeHostname yes
-CanonicalDomains 30eg.net kleinpa.net
-
 Host halite.30eg.net *.kleinpa.net
-     User peterklein
+    User peterklein
 
 Host *
-     User kleinpa
+    User kleinpa
 
 Host rhodonite.30eg.net
-     ForwardAgent yes
+    ForwardAgent yes
 
 Host switch-xk4.30eg.net
-     HostName 192.168.0.10
-     ProxyJump router-j01.30eg.net
-
+    HostName 192.168.0.10
+    ProxyJump router-j01.30eg.net
+    KexAlgorithms +diffie-hellman-group14-sha1
