--- a/config/sway/config
+++ b/config/sway/config
@@ -37,6 +37,8 @@ bindsym $mod+u exec $menu
 # mouse button for dragging.
 floating_modifier $mod normal
 
+smart_borders on
+
 # Reload the configuration file
 bindsym $mod+p reload
 
@@ -166,6 +168,33 @@ bindsym $mod+Ctrl+8 move container to workspace number $ws8
 bindsym $mod+Ctrl+9 move container to workspace number $ws9
 bindsym $mod+Ctrl+0 move container to workspace number $ws10
 
+bindsym $mod+z exec ncmpcpp
+
+bindsym $mod+tab workspace next_on_output 
+bindsym $mod+Shift+tab workspace prev_on_output
+
+# /--------|--------|--------|--------|--------|--------\          
+# |        | 1      | 2      | 3      | 4      | 5      |          
+# |--------|--------|--------|--------|--------|--------|          
+# |        | 6      | 7      | 8      | 9      | 10     |          
+# |--------|--------|--------|--------|--------|--------|          
+# |        |        |        |        |        |        |  left         
+# \--------|--------|--------|--------/--------|--------/--------\ 
+#                                     |        |        |        | 
+#                                     \--------|--------|--------/ 
+#
+#          /--------|--------|--------|--------|--------|--------\
+#          | parent | menu   | split  | tabs   |        | reload |
+#          |--------|--------|--------|--------|--------|--------|
+#          | full   |  left  | down   | up     | right  | scratch|
+#          |--------|--------|--------|--------|--------|--------|
+#   right  | splitt | resize | resize | resize | resize |        |
+# /--------\--------|--------|--------|--------|--------|--------/
+# | float  |        |  $mod  |      ctrl-backspace is kill
+# \--------|--------|--------/
+
+# remarks
+# - is there any way to squeeze a mod key onto the left side of my keyboard?
 
 
 # Assign windows to workspaces
@@ -209,24 +238,19 @@ client.unfocused        $bg     $bg     $fg     $bg       $bg
 client.background $bg
 
 
-#/--------|--------|--------|--------|--------|--------\                   /--------|--------|--------|--------|--------|--------\
-#|        | 1      | 2      | 3      | 4      | 5      |                   | parent | menu   | split  | tabs   |        | reload |
-#|--------|--------|--------|--------|--------|--------|                   |--------|--------|--------|--------|--------|--------|
-#|        | 6      | 7      | 8      | 9      | 10     |                   | full   |  left  | down   | up     | right  | scratch|
-#|--------|--------|--------|--------|--------|--------|                   |--------|--------|--------|--------|--------|--------|
-#|        |        |        |        |        |        |                   | splitt | resize | resize | resize | resize |        |
-#\--------|--------|--------|--------/--------|--------/--------\ /--------\--------|--------|--------|--------|--------|--------/
-#                                    |        |        |        | |        |        |  SWAY  |  ctrl-backspace is kill
-#                                    \--------|--------|--------/ \--------|--------|--------/
-
 for_window [app_id="pavucontrol"] floating enable, sticky enable, resize set width 550 px height 600px, move position cursor, move down 35
 
 ### Output configuration
 
 output * bg #000000 solid_color
 
+
+# output 'LG Electronics LG TV SSCR2 0x01010101' scale 2
+output 'LG Electronics LG TV SSCR2 0x01010101' res 2560x1440@119.998Hz
 output 'LG Electronics IPS231        211NDPH1W152' transform 270
 output 'Lenovo Group Limited T27hv-20 V3087CBZ' mode 2560x1440@74.780Hz
+
+output 'Microstep MPG321UX OLED ' res 3840x2160@119.999Hz scale 1.5
 
 set $laptop eDP-1
 bindswitch --reload --locked lid:on output $laptop disable
