--- a/ssh/config
+++ b/ssh/config
@@ -3,23 +3,21 @@ Include config.d/*
 CanonicalizeHostname yes
 CanonicalDomains 30eg.net kleinpa.net
 
-Host rhodonite.30eg.net sphene.30eg.net jade.30eg.net spinel.30eg.net quartz.30eg.net zircon.30eg.net
+# migrations are slow
+Host rhodonite.30eg.net sphene.30eg.net jade.30eg.net spinel.30eg.net quartz.30eg.net zircon.30eg.net switch-xk4.30eg.net
     User kleinpa
 
 Host rhodonite.30eg.net
     ForwardAgent yes
 
-Host switch-xk4.30eg.net
-    User kleinpa
-    HostName 192.168.0.10
-    ProxyJump router-j01.30eg.net
+Host switch-68i.30eg.net switch-xk4.30eg.net
+    ProxyJump zero-jumphost.30eg.net
     KexAlgorithms +diffie-hellman-group14-sha1
+    HostkeyAlgorithms +ssh-rsa
+    PubkeyAcceptedAlgorithms +ssh-rsa
 
 Host *.kleinpa.net
     User peterklein
 
 Host *.30eg.net
     User peter
-
-Host *
-  IdentityAgent ~/.1password/agent.sock
