--- a/ssh/config
+++ b/ssh/config
@@ -4,7 +4,7 @@ CanonicalizeHostname yes
 CanonicalDomains 30eg.net kleinpa.net
 
 # migrations are slow
-Host rhodonite.30eg.net sphene.30eg.net jade.30eg.net spinel.30eg.net quartz.30eg.net zircon.30eg.net switch-xk4.30eg.net
+Host rhodonite.30eg.net sphene.30eg.net spinel.30eg.net quartz.30eg.net zircon.30eg.net switch-xk4.30eg.net
     User kleinpa
 
 Host rhodonite.30eg.net
